--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,4 +16,5 @@
   <div id="footer" class="cleaner"><%= render 'layouts/footer' %></div>
   <%= render 'layouts/styles_&_scripts' %>
 </body>
+<h4>Session</h4> <%= debug(session) %>
 </html>
