--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -6,4 +6,38 @@
 
 body {
   margin: 0;
+  font-family: FreeSans;
+}
+
+a{
+  text-decoration: none;
+  color: #333333;
+  font-family: "Courier New";
+  &:hover{
+    color: black;
+  }
+}
+
+h1, h2, h3, h4, h5, h6{
+  margin: 3px;
+  font-family: courier;
+  color: #182f1b;
+}
+h1{
+  font-size: 1.6em;
+}
+h1{
+  font-size: 1.4em;
+}
+h1{
+  font-size: 1.2em;
+}
+
+label{
+  font-size: 0.7em;
+}
+input{
+  border-radius: 5px;
+  border: 1px solid #2e8b57;
+  margin: 0;
 }
