--- a/app/views/shared/_signin_window.erb
+++ b/app/views/shared/_signin_window.erb
@@ -1,5 +1,5 @@
 <div id="signin_window">
-  <h1>Sign in</h1>
+  <h3 class="center">Sign in</h3>
   <%= form_for(:session, :url => sessions_path) do |f| %>
     <div class="field">
       <%= f.label :email %><br />
