--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -3,10 +3,10 @@
   <%= link_to t('Home'), root_path %>
   <%= link_to t('Help'), help_path %>
   <% if signed_in?%>
-    <%= link_to t('Settings'), edit_user_path(current_user) %>
+    <%= link_to t('Profile'), profile_path %>
     <%= link_to t('Sign_out'), signout_path, :method => :delete %>
   <% else %>
-    <%= link_to_function t('Sign_in'), "showSigninWindow()", :id => "sign_in"%> <%= t('or') %> <%= link_to t('Sign_up'), signup_path %>
+    <%= link_to_function t('Sign_in'), "toggleSigninWindow()", :id => "sign_in"%> <%= t('or') %> <%= link_to t('Sign_up'), signup_path %>
   <% end %>
 </div>
 
