--- a/app/views/layouts/_sidebar.erb
+++ b/app/views/layouts/_sidebar.erb
@@ -1,4 +1,8 @@
-<h3>sidebar</h3>
-
+<div id="sidebar">
+  <h6>Stores</h6>
+  <% current_user.stores.each do |store| %>
+    <span class="store_name" id="<%=store.id%>"><%= store.name %></span><br>
+  <% end %>
+</div>
 
 
