--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 <body>
   <div id="header"><%= render 'layouts/header'%></div>
   <div id="main">
-    <div id="sidebar"><%= render 'layouts/sidebar' %></div>
+    <%= render 'layouts/sidebar' if signed_in? and current_user.stores%>
     <div id="content">
       <%= render 'shared/flash_messages'%>
       <%= yield %>
