--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,12 +1,4 @@
-<p>
-  <b>Name:</b>
-  <%= @store.name %>
-</p>
+<%= render 'stores/store_managing_menu'%>
 
-<p>
-  <b>Domain:</b>
-  <%= @store.domain %>
-</p>
 
-<p>
 
