--- a/app/views/layouts/stores.erb
+++ b/app/views/layouts/stores.erb
@@ -7,7 +7,8 @@
 <body>
   <%= render 'layouts/header'%>
   <div id="main">
-    <div id="content" style="width: 800px;">
+    <%= render 'layouts/sidebar' if signed_in? and current_user.stores.count > 0%>
+    <div id="content">
       <%= render 'shared/flash_messages'%>
       <%= yield  %>
     </div>
