--- a/app/views/stores/_form.html.erb
+++ b/app/views/stores/_form.html.erb
@@ -1,14 +1,14 @@
 <%= form_for(@store) do |f| %>
   <div class="form_fields">
-    <div class="field">
+    <div>
       <%= f.label :name %><br />
       <%= f.text_field :name %>
     </div>
-    <div class="field">
+    <div>
       <%= f.label :domain %><br />
       <%= f.text_field :domain %>
     </div>
-    <div class="actions">
+    <div>
       <%= f.submit %>
     </div>
   </div>
