--- a/app/views/stores/_store_managing_menu.erb
+++ b/app/views/stores/_store_managing_menu.erb
@@ -1,5 +1,7 @@
 <div id="store_managing_menu">
-  <%= link_to "Main", edit_store_path(@store) %>
+  <%= link_to "Main", store_path(@store) %>
+  <%= link_to "Settings", edit_store_path(@store) %>
   <%= link_to "Statistic", statistic_path(@store) %>
+  <%= link_to "Products", store_products_path(@store) %>
   <div class="float_r" id="store_title"><%= @store.name %></div>
 </div>
