--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,4 +1,6 @@
 <%= render 'stores/store_managing_menu'%>
 
+If You want to see, how looks your store, <%= link_to "Go to him!", store_store_home_path(@store), :target => "_blank" %>
+
 
 
