--- a/app/views/stores/_store_managing_menu.erb
+++ b/app/views/stores/_store_managing_menu.erb
@@ -3,5 +3,5 @@
   <%= link_to "Settings", edit_store_path(@store) %>
   <%= link_to "Statistic", statistic_path(@store) %>
   <%= link_to "Products", store_products_path(@store) %>
-  <div class="float_r" id="store_title"><%= @store.name %></div>
+  <%= link_to "Categories", store_categories_path(@store) %>
 </div>
