--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([:store, @product], :html => {:multipart => true}) do |f| %>
+<%= form_for([@store, @product], :html => {:multipart => true}) do |f| %>
   <div class="form_fields">
     <div>
       <%= f.label :title %><br />
