--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -18,7 +18,7 @@
     </div>
     <div>
       <%= f.label :category %><br />
-      <%= f.collection_select :category_id, Category.all, :id, :name %>
+      <%= f.collection_select :category_id, @categories, :id, :name %>
     </div>
     <div>
       <br/>
