--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,8 +6,7 @@
     <li>Ecommerce hosting included</li>
     <li>30,000+ stores run on ShopUp</li>
   </ul>
-  <%= link_to "Create your stores now!", new_store_path ,{:class => "big_green_button"}%><br>
-  <%= link_to "Go to your stores", store_path(current_user.stores.first) ,{:class => "big_green_button"}%>
+  <%= link_to "Create your stores now!", new_admin_store_path ,{:class => "big_green_button"} if current_user.stores.count  == 0%>
 <% else %>
   <h1>Create your ecommerce store today with ShopUp</h1>
   <h3>ShopUp offers a complete ecommerce solution</h3>
@@ -15,4 +14,8 @@
   Pick an ecommerce website template, list your products, accept credit card orders, and ship your goods — all with a
   few clicks of the mouse.
   With ShopUp it's easy to sell online and there's no software to download or maintain.</p>
+<% end %>
+<div class="cleaner"></div>
+<% @stores.each do |store|%>
+  <div style="height: 100px; width: 100px;" class="float_l"><%= store.name %></div>
 <% end %>
