--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -7,10 +7,10 @@
 <body>
   <%= render 'layouts/admin/header'%>
   <div id="main">
-    <%= render 'layouts/admin/menu' if signed_in?%>
     <div id="content">
       <%= render 'shared/flash_messages'%>
       <%= yield  %>
+      <div class="cleaner"></div>
     </div>
   </div>
   <div id="footer" class="cleaner"><%= render 'layouts/admin/footer' %></div>
