--- a/app/views/layouts/store/_header.erb
+++ b/app/views/layouts/store/_header.erb
@@ -1,8 +1,6 @@
 <div id="header">
 
-  <div id="header_menu">
-
-  </div>
+  <div id="header_menu"></div>
 
   <%= render 'shared/signin_window'  %>
 </div>
