--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -1,24 +1,24 @@
 <%= form_for([:admin, @store, @product], :html => {:multipart => true}) do |f| %>
   <div class="form_fields">
     <div>
-      <%= f.label :title %><br />
+      <%= f.label :title %>
       <%= f.text_field :title %>
     </div>
     <div>
-      <%= f.label :description %><br />
+      <%= f.label :description %>
       <%= f.text_field :description %>
     </div>
     <div>
-      <%= f.label :price %><br />
+      <%= f.label :price %>
       <%= f.text_field :price %>
     </div>
     <div>
-      <%= f.label :photo %><br />
+      <%= f.label :photo %>
       <%= f.file_field :photo %>
     </div>
     <% if @categories %>
       <div>
-        <%= f.label :category %><br />
+        <%= f.label :category %>
         <%= f.collection_select :category_id, @categories, :id, :name %>
       </div>
     <% end %>
