--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <div id="content">
       <%= render 'shared/flash_messages'%>
       <%= yield  %>
+      <div class="cleaner"></div>
     </div>
   </div>
   <div id="footer" class="cleaner"><%= render 'layouts/footer' %></div>
