Add open status to Store

--- a/app/views/admin/stores/_form.html.erb
+++ b/app/views/admin/stores/_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_for([:admin, @store]) do |f| %>
   <div class="form_fields">
     <div>
-      <%= f.label :name %><br />
+      <%= f.label :name %>
       <%= f.text_field :name %>
     </div>
     <div>
-      <%= f.label :domain %><br />
+      <%= f.label :domain %>
       <%= f.text_field :domain %>
     </div>
     <div>
