--- a/app/views/admin/stores/_store_managing_menu.erb
+++ b/app/views/admin/stores/_store_managing_menu.erb
@@ -4,4 +4,9 @@
   <%= link_to "Statistic", admin_store_statistic_path(@store) %>
   <%= link_to "Products", admin_store_products_path(@store) %>
   <%= link_to "Categories", admin_store_categories_path(@store) %>
+  <%= link_to "Fields","#" %>
+  <%= link_to "Orders","#" %>
+  <%= link_to "Design","#" %>
+  <%= link_to "Co-owners","#" %>
+  <%= link_to "Other","#" %>
 </div>
