--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -140,6 +140,10 @@
     &:first-child{
       border-left: none;
     }
+    &.active_tab{
+      font-weight: bold;
+      color: #666;
+    }
   }
 }
 
