--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for([:admin, @store, @category]) do |f| %>
   <div class="form_fields">
     <div>
-      <%= f.label :name %><br />
+      <%= f.label :name %>
       <%= f.text_field :name %>
     </div>
     <div>
