--- a/app/views/admin/stores/_store_managing_menu.erb
+++ b/app/views/admin/stores/_store_managing_menu.erb
@@ -4,7 +4,7 @@
   <%= link_to "Statistic", admin_store_statistic_path(@store) %>
   <%= link_to "Products", admin_store_products_path(@store) %>
   <%= link_to "Categories", admin_store_categories_path(@store) %>
-  <%= link_to "Fields","#" %>
+  <%= link_to "Fields",admin_store_fields_path(@store) %>
   <%= link_to "Orders","#" %>
   <%= link_to "Design","#" %>
   <%= link_to "Co-owners","#" %>
