--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -66,6 +66,15 @@ input[type=submit] {
   cursor: pointer;
 }
 
+input[type=checkbox] {
+  width: 15px;
+  height: 15px;
+  padding: 2px;
+  color: #9acd32;
+  font-size: 1.5em;
+  display: inline;
+}
+
 form input, form select {
   display: block;
   margin-top: 2px;
