--- a/app/views/layouts/admin/_footer.erb
+++ b/app/views/layouts/admin/_footer.erb
@@ -3,5 +3,5 @@
   <%= link_to "Contact Us", contact_path %>
 </p>
 <p>
-  Copyright © 2048 <a href="#">Your Company Name</a>
+  Copyright &copy; 2048 <a href="#">Your Company Name</a>
 </p>
