--- a/app/assets/stylesheets/store/static.scss
+++ b/app/assets/stylesheets/store/static.scss
@@ -6,16 +6,17 @@
 
 body {
   margin: 0;
-  font-family: FreeSans;
-  background-color: #dddddd;
+  font-family: verdana;
+  color: #555;
+  background-color: white;
 }
 
 a{
   text-decoration: none;
-  color: #333333;
+  color: #555;
   font-family: "Courier New";
   &:hover{
-    color: black;
+    color: #9acd32;
   }
 }
 
@@ -24,9 +25,9 @@ p{
 }
 
 h1, h2, h3, h4, h5, h6{
-  margin: 3px;
+  margin: 8px 3px;
   font-family: courier;
-  color: #182f1b;
+  color: #35683c;
 }
 h1{
   font-size: 1.6em;
@@ -51,37 +52,22 @@ label{
   font-size: 0.7em;
   padding: 5px;
 }
-input{
+input, select {
+  height: 30px;
   border-radius: 5px;
-  border: 1px solid #2e8b57;
-  margin: 0;
-  padding: 1px;
+  border: 1px solid #9acd32;
+  margin: 0px;
+  padding: 3px 6px;
+  color: #555;
+  font-size: 0.95em;
 }
 
-select{
+input[type=submit] {
   cursor: pointer;
-  height: 25px;
-  background-color: #b4b390;
-  color: #ffffff;
-  border-radius: 3px;
-  border: none;
-  option{
-    background-color: #b4b390;
-  }
 }
 
-
-//
-//button{
-//  cursor: pointer;
-//  color: #d6d6d6;
-//  height: 2em;
-//  width: 100px;
-//  background: -webkit-linear-gradient(top, rgb(129, 141, 136) 0%, rgb(106, 124, 143) 100%);
-//  border: 2px solid #bdcec7;
-//  border-radius: 5px;
-//  &:hover{
-//    background: -webkit-linear-gradient(top, rgb(78, 91, 105) 0%, rgb(92, 101, 116) 100%);
-//    border-width: 2px;
-//  }
-//}
+form input, form select {
+  display: block;
+  margin-top: 2px;
+  margin-bottom: 5px;
+}
