--- a/app/views/layouts/stores/_styles_&_scripts.erb
+++ b/app/views/layouts/stores/_styles_&_scripts.erb
@@ -3,4 +3,4 @@
 <script type="text/javascript" src="jquery.blend.js"></script>
 <![endif]-->
 <%= stylesheet_link_tag 'store/application.scss', :media => 'all' %>
-<%= javascript_include_tag 'store/application', :media => 'all' %>
+<%= javascript_include_tag 'stores/application', :media => 'all' %>
