--- a/app/views/layouts/stores/_header.erb
+++ b/app/views/layouts/stores/_header.erb
@@ -1,5 +1,5 @@
 <div id="header">
-
+  <div id="title"><%= @store.name %></div>
   <div id="header_menu"></div>
 
   <%= render 'shared/signin_window'  %>
